; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-exec.c_PQexecPrepared.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-exec.c_PQexecPrepared.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PQexecPrepared(i32* %0, i8* %1, i32 %2, i8** %3, i32* %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8**, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i8** %3, i8*** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32* %5, i32** %14, align 8
  store i32 %6, i32* %15, align 4
  %16 = load i32*, i32** %9, align 8
  %17 = call i32 @PQexecStart(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %7
  store i32* null, i32** %8, align 8
  br label %34

20:                                               ; preds = %7
  %21 = load i32*, i32** %9, align 8
  %22 = load i8*, i8** %10, align 8
  %23 = load i32, i32* %11, align 4
  %24 = load i8**, i8*** %12, align 8
  %25 = load i32*, i32** %13, align 8
  %26 = load i32*, i32** %14, align 8
  %27 = load i32, i32* %15, align 4
  %28 = call i32 @PQsendQueryPrepared(i32* %21, i8* %22, i32 %23, i8** %24, i32* %25, i32* %26, i32 %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %20
  store i32* null, i32** %8, align 8
  br label %34

31:                                               ; preds = %20
  %32 = load i32*, i32** %9, align 8
  %33 = call i32* @PQexecFinish(i32* %32)
  store i32* %33, i32** %8, align 8
  br label %34

34:                                               ; preds = %31, %30, %19
  %35 = load i32*, i32** %8, align 8
  ret i32* %35
}

declare dso_local i32 @PQexecStart(i32*) #1

declare dso_local i32 @PQsendQueryPrepared(i32*, i8*, i32, i8**, i32*, i32*, i32) #1

declare dso_local i32* @PQexecFinish(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
